--- a/quickapi/templates/ref_electrode.html
+++ b/quickapi/templates/ref_electrode.html
@@ -8,9 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.7.0/styles/default.min.css" />
   </head>
   <body class="bg-secondary">
-    <div class="card mx-auto mt-5" style="width: 24rem">
+    <div class="card mx-auto mt-5" style="width: 50rem">
       <div class="card-body">
         <h5 class="card-title fs-3">Reference Electrode Converter</h5>
         <p class="card-text fs-4">Input Voltage: {{voltage}} mV <br />
@@ -36,10 +37,27 @@
                 {% endfor %}
                 </tbody>
               </table>
+          <hr />
+          <p class="card-text fs-3">API Usage:</p>
+          <pre>
+            <code class="language-python">
+import requests
+import json
+
+samples = [10, 20, 30, 40]  # Input voltages in mV
+outputs = []
+for each in samples:
+    r = requests.get(f"https://bonh.am/electrode?voltage={each}&input=AgClSat&output=NHE&pretty=0")
+    outputs.append(r.json().get("output"))
+print(outputs) # [209.0, 219.0, 229.0, 239.0]</code>
+</pre>
       </div>
 
 
     <!-- Bootstrap Javascripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <script src="https://unpkg.com/@highlightjs/cdn-assets@11.7.0/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
   </body>
 </html>
